# newsletter_fetcher

./: README.md  basic_agent.py  calculate_trends.py  cosmos_client.py  llm_clients.py  llm_config.yaml  main.py  pyproject.toml  requirements.txt  structurize.py
.github/workflows/: ci.yml
