[project]
name = "newsletter-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "azure-cosmos==4.9.0",
    "azure-functions==1.23.0",
    "bs4==0.0.2",
    "google-api-python-client>=2.81.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.5.1",
    "google-generativeai>=0.8.5",
    "groq>=0.25.0",
    "html2text==2025.4.15",
    "openai==1.70.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "tenacity>=9.1.2",
    "tiktoken==0.9.0",
]
